
cc_library(
	name = "coroutine2",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_coroutine//:coroutine",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_config//:config"
	],
)
